--- a/teeth.cabal
+++ b/teeth.cabal
@@ -1,12 +1,12 @@
 name:                teeth
-version:             0.2.0.0
+version:             0.2.0.1
 synopsis:            Dental data types
 description:         Some data types useful for describing the hard pointy things inside your mouth
 homepage:            https://github.com/expipiplus1/teeth
 license:             MIT
 license-file:        license
 author:              Joe Hermaszewski
-maintainer:          haskell@monoid.al
+maintainer:          roots@monoid.al
 copyright:           copyright © 2015 Joe Hermaszewski
 category:            Anatomy
 build-type:          Simple
@@ -18,5 +18,5 @@ source-repository head
 
 library
   exposed-modules:     Anatomy.Teeth
-  build-depends:       base >=4.7 && <4.8
+  build-depends:       base >=4.7 && <4.9
   default-language:    Haskell2010
